UI updated for better performance

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://i.ibb.co.com/HTZgmr7Z/task-management-logo.jpg"
+      href="https://i.ibb.co.com/dhqLkD4/icons8-to-do-list.gif"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management</title>
+    <title>To Do Management</title>
   </head>
   <body>
     <div id="root"></div>
